--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8"/>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <title>DraftStone</title>
+    <title id="window-title">DraftStone</title>
 
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="./res/css/style.css">
   </head>
   <body>
+    <!-- React Root -->
     <div id="root"></div>
 
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
 
+    <!-- ServiceWorker -->
+    <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('./serviceWorker.js', { scope: './' })
+        .then(registration => console.log("[ServiceWorker] Registration successful: ", registration.scope),
+          error => console.log("[ServiceWorker] Registration failed: ", error));
+      });
+    }
+    </script>
+
     <!-- Entry point -->
-    <script src="./dist/bundle.js"></script>
+    <script src="./dist/vendors.bundle.js" type="application/javascript"></script>
+    <script src="./dist/app.bundle.js" type="application/javascript"></script>
   </body>
 </html>
