Added I18N.js to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     }
     </script>
 
+    <!-- Library files -->
+    <script src="./res/js/I18N.js" type="application/javascript"></script>
+
     <!-- Entry point -->
     <script src="./dist/vendors.bundle.js" type="application/javascript"></script>
     <script src="./dist/app.bundle.js" type="application/javascript"></script>
