Fixed project setup

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </noscript>
 
     <!-- ServiceWorker -->
-    <script>
+    <!-- script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
         navigator.serviceWorker.register('./serviceWorker.js', { scope: './' })
@@ -25,7 +25,7 @@
           error => console.log("[ServiceWorker] Registration failed: ", error));
       });
     }
-    </script>
+    </script -->
 
     <!-- Library files -->
     <script src="./res/js/I18N.js" type="application/javascript"></script>
